inserido comentario generico

--- a/teste2.html
+++ b/teste2.html
@@ -6,10 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dolor commodi labore reprehenderit praesentium in dicta sed tenetur perferendis cumque! Cum hic necessitatibus exercitationem. Laboriosam cupiditate amet nam quidem error!
-        
+   
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam nemo reprehenderit iusto natus ex maiores quos excepturi? Minus vel earum ex, voluptatem unde magni molestiae, tempore numquam et adipisci dolore.
+
+
+    </p>
+
     </p>
     
 </body>
+
 </html>
-git add <div class=""></div>
+
+
+
