--- a/teste2.html
+++ b/teste2.html
@@ -8,6 +8,8 @@
 <body>
 
     <h1>teste de git</h1>
+    <p>nova linha</p>
+    
 
    
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam nemo reprehenderit iusto natus ex maiores quos excepturi? Minus vel earum ex, voluptatem unde magni molestiae, tempore numquam et adipisci dolore.
