--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
 </head>
 
 <body>
+   
+
     <header>   
         <h1 class="page-title"> Sapataria do Oswaldo</h1>
         <h2> Desde 1950 consertando o seu sapato</h2>
+        <nav>
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="Quem somos.html">Quemsomos</a></li>
+                <li><a href="Catalogo.html">Catalogo</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
