Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <nav class="menu" id="top">
     <li> <a href="#Home">Home</a></li>
-    <li> <a href="#Quem Somos">Quem Somos</a></li>
+    <li> <a href="#quem-somoss">Quem Somos</a></li>
     <li> <a href="#Catalogo">Catalogo</a></li>
     <li> <a href="#Contato">Contato</a></li>
     </nav> 
@@ -83,3 +83,4 @@
 </body>
 
 </html>
+
