Fix HTML structure and header tags

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <main>
         <article>
-            <h class="article-title">Filosofia de trabalho</h>
+           <h2 class="article-title">Filosofia de trabalho</h2>
             <br>
             <br>
             <h> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati sapiente laboriosam excepturi, a eos
@@ -83,4 +83,5 @@
 </body>
 
 </html>
+
 
