Fix semantic HTML by changing <h> to <p>
Replaced <h> tag with <p> tag for better semantic HTML.

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
            <h2 class="article-title">Filosofia de trabalho</h2>
             <br>
             <br>
-            <h> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati sapiente laboriosam excepturi, a eos
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati sapiente laboriosam excepturi, a eos
                 provident, veritatis, enim soluta adipisci dolores incidunt debitis ex quae harum nihil officia rerum
                 culpa consectetur placeat totam optio ea? Nihil vitae corrupti quibusdam reprehenderit soluta!
-            </h>
+            </p>
         </article>
 
         <!-- 
@@ -83,5 +83,6 @@
 </body>
 
 </html>
+
 
 
