--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
            <h2 class="article-title">Filosofia de trabalho</h2>
             <br>
             <br>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati sapiente laboriosam excepturi, a eos
-                provident, veritatis, enim soluta adipisci dolores incidunt debitis ex quae harum nihil officia rerum
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati sapiente laboriosam excepturi, <br> 
+                a eos
+                provident, veritatis, enim soluta adipisci dolores incidunt debitis ex quae harum nihil officia<br>
+                rerum
                 culpa consectetur placeat totam optio ea? Nihil vitae corrupti quibusdam reprehenderit soluta!
             </p>
         </article>
@@ -83,6 +85,7 @@
 </body>
 
 </html>
+
 
 
 
