Fix HTML structure and update product sections
Corrected HTML structure and replaced incorrect tags with proper section tags for product listings.

--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
             ALT + SHIFT + F : AUTO-INDENTAÇÂO 
             CTRL + D : seleciona palavras iguais à selecionada de 1em1 
                                                                     -->
-        <h2 class="titulo-produto">Sapatos</h2>
-        <img class="imagem-produto" src="img/sapato1.png" alt="foto de um sapato">
-        <img class="imagem-produto" src="img/sapato2.png" alt="foto de um sapato">
-        <img class="imagem-produto" src="img/sapato3.png" alt="foto de um sapato">
+        <section>="titulo-produto">Sapatos</section>
+        <section>="imagem-produto" src="img/sapato1.png" alt="foto de um sapato">
+        <section>="imagem-produto" src="img/sapato2.png" alt="foto de um sapato">
+        <section>="imagem-produto" src="img/sapato3.png" alt="foto de um sapato">
 
-        <h2 class="titulo-produto">Bolsas</h2>
-        <img class="imagem-produto" src="img/bolsa1.png" alt="foto de uma bolsa">
-        <img class="imagem-produto" src="img/bolsa3.webp" alt="foto de uma bolsa">
-        <img class="imagem-produto" src="img/bolsa2.jpg" alt="foto de uma bolsa">
+        <section>="titulo-produto">Bolsas</h2>
+        <section>="imagem-produto" src="img/bolsa1.png" alt="foto de uma bolsa">
+        <section>="imagem-produto" src="img/bolsa3.webp" alt="foto de uma bolsa">
+        <section>="imagem-produto" src="img/bolsa2.jpg" alt="foto de uma bolsa">
 
 
-        <h2 class="titulo-produto">Cintos</h2>
-        <img class="imagem-produto" src="img/cinto1.jpg" alt="foto de um cinto">
-        <img class="imagem-produto" src="img/cinto5.png" alt="foto de um cinto">
-        <img class="imagem-produto" src="img/cinto2.jpg" alt="foto de um cinto">
+        <sections="titulo-produto">Cintos</h2>
+        <sections="imagem-produto" src="img/cinto1.jpg" alt="foto de um cinto">
+        <section>="imagem-produto" src="img/cinto5.png" alt="foto de um cinto">
+        <section>="imagem-produto" src="img/cinto2.jpg" alt="foto de um cinto">
 
         <footer>
             <address>
@@ -85,6 +85,7 @@
 </body>
 
 </html>
+
 
 
 
